fix: icon alignment

--- a/public/styles/forms.less
+++ b/public/styles/forms.less
@@ -1336,7 +1336,7 @@ ol {
     height: 18px;
     width: 18px;
     line-height: 18px;
-    font-size: 12px;
+    font-size: 10px;
     padding: 0;
     margin: 0;
     color: var(--config-color-fade);
